App updates/canary-deploy/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1
  namespace: canary-demo
spec:
  selector:
    app: nginx
    version: v1
  ports:
    - port: 80
      targetPort: 80
