App updates/canary-deploy/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
  namespace: canary-demo
spec:
  selector:
    app: nginx
    version: v2
  ports:
    - port: 80
      targetPort: 80
